Revert "Fix spacing for Clients on iPad"
This reverts commit 011d9d86b0432114b33e446eda5d698d8725cc8b.

--- a/src/assets/scss/templates/_clients.scss
+++ b/src/assets/scss/templates/_clients.scss
@@ -10,8 +10,7 @@ body.page-template-clients, body.page-template-testimonials {
 
     #clients, #testimonials {
 
-        // Desktop only
-        @media (min-width: 1200px) {
+        @media (min-width: 768px) {
 
             .trd-testimonial-text{
                 margin-bottom: 0;
